mobilenav routing and z-index fix.

--- a/resources/assets/sass/molecules/nav.scss
+++ b/resources/assets/sass/molecules/nav.scss
@@ -36,7 +36,7 @@
     position: fixed;
     left:0px;
     bottom:0px;
-    z-index: 10000;
+    z-index: 9997;
 }
 
 .anaxi-mobile-nav-btns {
